--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,6 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.makeramen:roundedimageview:2.2.1'
     compile 'net.danlew:android.joda:2.9.2'
+    compile 'com.android.support:support-v4:22.2.1'
+
 }
