--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,5 +28,6 @@ dependencies {
     compile 'com.makeramen:roundedimageview:2.2.1'
     compile 'net.danlew:android.joda:2.9.2'
     compile 'com.android.support:support-v4:22.2.1'
+    compile 'com.jakewharton:butterknife:7.0.1'
 
 }
