--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,8 @@ android {
     }
 }
 
+apply plugin: 'com.neenbedankt.android-apt'
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
@@ -29,5 +31,7 @@ dependencies {
     compile 'net.danlew:android.joda:2.9.2'
     compile 'com.android.support:support-v4:22.2.1'
     compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'org.parceler:parceler-api:1.0.4'
+    apt 'org.parceler:parceler:1.0.4'
 
 }
